2026-01-07 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.6.0-alpha
	* Added the docs directory.
	* Updated build.gradle.
		* Added the javadoc extension.
		* The javadoc task will output the contents in the newly added docs directory.

2026-01-01 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.5.1-alpha
	* Renewed the copyright year for each Java file to 2026.
	* Updated the package-info.java for io.github.thatgarlicdude.pacio.file.
		* Changed the comment describing the package to represent it better.

2025-12-29 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.5.0-alpha
	* Updated PacRomSet.java.
		* Renamed it to PacDirectory.java.
		* The roms variable is now called files, and is a final List instead of an ArrayList.
		* The method getFiles now returns an unmodifiable list instead of pointing to the list.
		* Renamed the open methods to from.
		* Removed the openRoms method.
		* Lots of cleanup.
	* Added PacObject.java.
		* This serves as a replacement for PacFile.java.
	* Added Loadable.java.
		* Loadable features two abstract methods: load and unload.
	* Updated PacRom.java.
		* Renamed it to PacFile.java, not to be confused with the one that's deleted.
		* Removed the DEFAULT_DATA variable.
		* Renamed the open methods to from.
		* The readN method has been renamed to read.
		* The writeN method has been renamed to write.
		* Lots of cleanup.
	* Removed the io.github.thatgarlicdude.pacio.roms package in the test src.
	* Added TestPacIO.java.
		* This is a test class used for testing out the methods in the PacIO class.

2025-12-18 GarlicDude <https://www.github.com/thatgarlicdude>

	PacIO Version 1.4.0-alpha
	* Removed PacRomOpener.java.
		* The static open methods were transferred to PacRom.java instead.
	* Removed PacRomSetOpener.java.
		* Like PacRomOpener, the static open methods were moved to PacRomSet.java.
	* Added Savable.java.
		* It's an interface used for saving a file in memory.